--- a/wp-content/themes/twentythirteen/css/form_style.css
+++ b/wp-content/themes/twentythirteen/css/form_style.css
@@ -60,7 +60,10 @@ h4.Critics_notif {
 	margin-left:45px;
 	margin-bottom: 20px;
 }
-
+div.form_outer_div{
+	font-family: "B Nazanin", sans-serif;
+	font-size: 20px;
+}
  #name_wraper  #criticism_form_name {
 	margin-left: 150px;
 	margin-right: 200px;
